--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "07-restserver",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.7.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
+    "nodemon": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.10.9",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemon": "^2.0.4",
+    "underscore": "^1.11.0"
   }
 }
